Fix issue where PayPal email addresses overflow the container (#440)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -770,6 +770,8 @@ $loader-scale-duration: 300ms;
     margin-left: 20px;
     text-align: left;
     flex-grow: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
     .braintree-method__label--small {
       font-size: 13px;
